# MiniCCompiler

./: CMakeLists.txt  LICENSE  input.txt  main.cpp
ast/: astnode.hpp  expr.hpp  stmt.hpp
include/: codegenerator.hpp  constraints.hpp  irbuilder.hpp  irinstr.hpp  lexer.hpp  parser.hpp  semantic_analyzer.hpp  symbol.hpp  token.hpp  value.hpp
src/codegenerator/: argreg.hpp  codegenerator.cpp  registerpool.cpp  registerpool.hpp  tempreg.hpp
src/irbuilder/: irbuilder.cpp
src/lexer/: lexer.cpp
src/parser/: parser.cpp
src/semantic_analyzer/: semantic_analyzer.cpp
